--- a/sign_in.html
+++ b/sign_in.html
@@ -45,8 +45,8 @@
     <button type="submit">Submit</button><br><br>
 </form><br>
     
-    <a href="/web sec/sign_up.html" target="_blank">Sign Up</a>
-    <a href="/web sec/forgot_pass.html" target="_blank">Forgot Password?</a> <br>
+    <a href="/sign_up.html" target="_blank">Sign Up</a>
+    <a href="/forgot_pass.html" target="_blank">Forgot Password?</a> <br>
     
 </div>
 </body>
