logo issues solved and sign up button added

--- a/sign_in.html
+++ b/sign_in.html
@@ -37,7 +37,7 @@
 </head>
 <body>
     <div class="container">
-    <a href="https://gymkhana.iitb.ac.in/~hostel5/" target="_blank"><img src="/web sec/favicon-32x32.png" alt="H5 logo"></a>
+    <a href="https://gymkhana.iitb.ac.in/~hostel5/" target="_blank"><img src="/favicon-32x32.png" alt="H5 logo"></a>
     <h1>Sign In</h1>
     <form action="form.php">
     <b>Roll No. </b>:<input type="text" placeholder="Roll No." required><br><br>
