--- a/sign_up.html
+++ b/sign_up.html
@@ -8,7 +8,7 @@
     <style>
          .container{
             width: 8cm;
-            height: 7cm;
+            height: 8cm;
             transform: translate(13cm,0cm);
             border: 4px solid black;
             padding: 8px;
@@ -23,13 +23,14 @@
 <body>
     <div class="container">
     
-    <a href="https://gymkhana.iitb.ac.in/~hostel5/" target="_blank"><img src="/web sec/favicon-32x32.png" alt="H5 logo"></a>
+    <a href="https://gymkhana.iitb.ac.in/~hostel5/" target="_blank"><img src="/favicon-32x32.png" alt="H5 logo"></a>
     <h1>Sign Up</h1>
     <form action="form.php"></form>
     Name :<input type="text" placeholder="Name"><br> <br>
     Roll No : <input type="text" placeholder="Roll No"><br><br>
     Mobile : <input type="tel" placeholder="Mobille"><br><br>
     Password : <input type="password" placeholder="Password"><br><br>
+    <button type="submit">Sign Up</button>
 </div>
 </body>
 </html>
