--- a/forgot_pass.html
+++ b/forgot_pass.html
@@ -23,7 +23,7 @@
 </head>
 <body>
     <div class="container">
-    <a href="https://gymkhana.iitb.ac.in/~hostel5/" target="_blank"><img src="/web sec/favicon-32x32.png" alt="H5 logo" ></a>
+    <a href="https://gymkhana.iitb.ac.in/~hostel5/" target="_blank"><img src="/favicon-32x32.png" alt="H5 logo" ></a>
     <h1>Forgot Password</h1>
     <form action="form.php"></form>
    <b>Mobile :</b><input type="tel" placeholder="for OTP" ><br><br>
